--- a/css/style.css
+++ b/css/style.css
@@ -18,9 +18,6 @@ body{
     justify-content: center;
 }
 
-.border{
-    border: 1px solid black;
-}
 
 .logo{
     height: 40px;
@@ -143,15 +140,16 @@ a{
 
 .white-container{
     min-height: 500px;
-    min-width: 100%;
+    min-width: 95%;
     display: flex;
     background-color: white;
     align-items: center;
-    justify-content: space-around;
+    justify-content: center;
+    padding-left: 2.5%;
+    padding-right: 2.5%;
 }
 
 .large-box{
-    border: 2px dashed black;
     height: 450px;
     width: 650px;
 }
@@ -161,24 +159,32 @@ a{
 }
 
 .small-box{
-    border: 2px dashed black;
     height: 450px;
     width: 450px;
     flex-wrap: wrap;
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-    margin-left: 135px;
 }
 
 
 .luogo{
     font-size: 40px;
-    padding-bottom: 25px;
+    height: 0;
+}
+
+.server{
+    margin-top: 200px;
 }
 
 .luogo-top{
     padding-top: 30px;
+    padding-bottom: 25px;
+    font-size: 40px;
+}
+
+h1{
+    margin-top: 20px;
 }
 
 .trovarsi{
@@ -187,20 +193,15 @@ a{
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
-    margin-right: 150px;
-    margin-bottom: 150px;
 }
 
 .dove-box{
-    border: 2px dashed black;
     height: 450px;
     width: 450px;
     flex-wrap: wrap;
     flex-direction: column;
     justify-content: flex-start;
     align-content: flex-start;
-    margin-left: 135px;
-    margin-right: 200px;
 }
 
 
@@ -213,33 +214,33 @@ a{
 }
 
 .pochi-box{
-    border: 2px dashed black;
     height: 450px;
     width: 450px;
     flex-wrap: wrap;
-    flex-direction: column;
-    justify-content: center;
-    align-content: flex-end;
-    margin-left: 30px;
+    padding-left: 6%;
 }
 
 .grey-container{
     min-height: 500px;
-    min-width: 100%;
+    min-width: 90%;
     background-color: #F6F6F6;
     align-items: center;
     margin: 0 auto;
-    padding: 40px 40px;
     justify-content: center;
+    padding-left: 5%;
+    padding-right: 5%;
 }
 
 .green-box{
-    border: 2px dashed black;
     height: 800px;
     width: 1100px;
     flex-direction: column;
     flex-wrap: wrap;
     align-items: center;
+}
+
+.video{
+    margin-top: 40px;
 }
 
 .chillin{
@@ -261,17 +262,16 @@ a{
 .pronto-container{
     height: 200px;
     min-width: 100%;
-    border: 1px solid black;
     margin-bottom: 50px;
     align-items: center;
     justify-content: center;
+    padding-top: 80px;
 }
 
 .pronto-box{
     background-image: url(/img/stars.svg);
     width: 500px;
     height: 200px;
-    border: 2px dashed black;
     background-repeat: no-repeat;
     background-size: 100%;
     flex-direction: column;
@@ -280,7 +280,7 @@ a{
 }
 
 .btn-blue{
-    color: black;
+    color: white;
     background-color:#8EA1E1;
     border-radius: 35px;
     height: 50px;
@@ -294,26 +294,32 @@ a{
 
 .pink-box{
     background-color: #23272A;
-    border: 2px dashed white;
     height: 580px;
     width: 300px;
+    color: white;
+    flex-direction: column;
 }
 
-.cian-box{
+.info-box{
     background-color: #23272A;
-    border: 2px dashed white;
-    height: 580px;
+    height: 400px;
     width: 200px;
+    color: white;
+    flex-direction: column;
 }
 
 .dg-flex-container{
     height: 120px;
-    min-width: 100%;
+    min-width: 95%;
     display: flex;
     background-color: #23272A;
-    align-items: flex-end;
     justify-content: center;
-    border-top: 1px solid white;
+    padding-left: 2.5%;
+    padding-right: 2.5%;
+}
+
+.btm-15{
+    padding-bottom: 10px;
 }
 
 
@@ -324,12 +330,44 @@ a{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    color: white;
+    border-top: 1px solid white;
+}
+
+.footer-icons{
+    background-color: #23272A;
+    height: 40px;
+    color: white;
+}
+
+.posto-box{
+    height: 400px;
+    width: 300px;
+    flex-direction: column;
+    justify-content: flex-start;
+    color: white;
+    padding-bottom: 15px;
+}
+
+.b-words{
+    color: #6F86D6;
+}
+
+.it-flag{
+    width: 16px;
+    height: 16px;
     
 }
 
-.ciao{
-    background-color: #23272A;
-    border: 2px dashed white;
-    height: 30px;
-    width: 80px;
+.italiano{
+    font-size: 16px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    display: inline-flex;
+}
+
+
+.bg-blue{
+    background-color: #8EA1E1;
+    color: white
 }
